Moved Home link to Lasagna page
Home link was on index page and was creating an error.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,8 @@
     <title>Lasagna</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Lasagna</h1>
+
+    <a href="../index.html">Home</a>
 </body>
 </html>
