Added Chicken, Goulash pages. Modified index
Index did not include links to new pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="../index.html">Home</a><br><br>
-
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <a href="recipes/lasagna.html">World's Best Lasagna</a><br><br>
+    <a href="recipes/chicken.html">Air Fryer Fried Chicken</a><br><br>
+    <a href="recipes/goulash.html">Classic Goulash</a>
 
     
 </body>
