--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/lasagna.html">World's Best Lasagna</a><br><br>
-    <a href="recipes/chicken.html">Air Fryer Fried Chicken</a><br><br>
-    <a href="recipes/goulash.html">Classic Goulash</a>
-
+    <ul>
+        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li><a href="recipes/chicken.html">Air Fryer Fried Chicken</a></li>
+        <li><a href="recipes/goulash.html">Classic Goulash</a></li>
+    </ul>
     
 </body>
 </html>
