Many much modifications
Changed CSS and html on all pages

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Air Fryer Fried Chicken</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Air Fryer Fried Chicken</h1>
+    <h1 class="chicken">Air Fryer Fried Chicken</h1>
+
+    <h2>Buttermilk fried chicken in the air fryer... Delicious fried chicken without the fry!</h3>
+
+    <a href="../index.html">Home</a><br>
 
     <img src="../img/chicken.jpg" alt="picture of fried chicken" height="300" width="300">
-
-    <h2>Buttermilk fried chicken in the air fryer... Delicious fried chicken without the fry!</h2>
 
     <p>Fried Chicken is a dish that is typically deep-fried in oil.  The oil makes the chicken relatively unhealthy.</p>
         
     <p>A way around that unhealthiness is to air fry the chicken instead.  This recipe will take advantage of that technology to crisp up the chicken.</p>
 
-    <h3>Ingredients</h3>
+    <h2 class="ingredients">Ingredients</h2>
 
-    <ul>
+    <ul id="list-ingredients">
         <li>1 ½ pounds boneless, skinless chicken thighs</li>
         <li>2 cups buttermilk</li>
         <li>1 cup all-purpose flour</li>
@@ -27,9 +30,9 @@
         <li>cooking spray</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h2 class="ingredients">Steps</h2>
 
-    <ol>
+    <ol id="list-ingredients">
         <li>Place chicken thighs in a shallow casserole dish. Pour buttermilk over chicken and refrigerate for 4 hours, or overnight.</li>
         <li>Preheat an air fryer to 380 degrees F (190 degrees C).</li>
         <li>Mix flour, seasoned salt, and pepper in a large gallon-sized resealable plastic bag. Dredge chicken thighs in seasoned flour. Dip back into buttermilk, then coat with panko bread crumbs.</li>
@@ -37,7 +40,5 @@
         <li>Cook in the preheated air fryer for 15 minutes. Flip the thighs and spray tops of chicken again. Cook until chicken is no longer pink in the center and the juices run clear, about 10 more minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C)</li>
         <li>Repeat with remaining chicken.</li>
     </ol>
-
-    <a href="../index.html">Home</a>
 </body>
 </html>
