--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>My Favorite Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Mikes Favorite Recipes</h1>
 
     <ul>
-        <li><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
-        <li><a href="recipes/chicken.html">Air Fryer Fried Chicken</a></li>
-        <li><a href="recipes/goulash.html">Classic Goulash</a></li>
+        <li class="links"><a href="recipes/lasagna.html">World's Best Lasagna</a></li>
+        <li class="links"><a href="recipes/chicken.html">Air Fryer Fried Chicken</a></li>
+        <li class="links"><a href="recipes/goulash.html">Classic Goulash</a></li>
     </ul>
     
 </body>
