--- a/recipes/goulash.html
+++ b/recipes/goulash.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Classic Goulash</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Classic Goulash</h1>
+    <h1 class="goulash">Classic Goulash</h1>
+
+    <h3>This meaty goulash recipe is easy to make on the stovetop but can also be done in a slow cooker. Inspired by Paula Deen's Bobby's Goulash.</h3>
+
+    <a href="../index.html">Home</a><br>
 
     <img src="../img/goulash.jpg" alt="picture of goulash" height="300" width="300">
-
-    <h2>This meaty goulash recipe is easy to make on the stovetop but can also be done in a slow cooker. Inspired by Paula Deen's Bobby's Goulash.</h2>
 
     <p>Goulash is a stew made of beef or other meat and vegetables, mostly tomatoes and bell peppers, and generously seasoned with paprika powder. The dish originated in Hungary from where it traveled to other Central European countries and beyond.</p>
         
     <p>As a result, there are countless goulash variations, such as pork goulash, and even goulash made with chicken or turkey.</p>
 
-    <h3>Ingredients</h3>
+    <h2 class="ingredients">Ingredients</h2>
 
-    <ul>
+    <ul id="list-ingredients">
         <li>1 tablespoon olive oil</li>
         <li>1 large yellow onion, chopped</li>
         <li>2 pounds lean ground beef</li>
@@ -32,14 +35,13 @@
         <li>2 cups uncooked elbow macaroni</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h2 class="ingredients">Steps</h2>
 
-    <ol>
+    <ol id="list-ingredients">
         <li>Heat olive oil in a large Dutch oven over medium-high heat. Add onion and cook 3 minutes, stirring often. Add ground beef and cook, breaking up the meat until it is evenly browned, about 5 minutes. Add garlic and cook 3 minutes, stirring often.</li>
         <li>Stir in water, tomato sauce, diced tomatoes, soy sauce, Italian seasoning, seasoned salt, and bay leaves. Bring to a simmer, cover and cook 5 minutes, stirring halfway through.</li>
         <li>Stir in uncooked macaroni, cover, and simmer over medium heat until pasta is tender, 11 to 13 minutes, stirring occasionally. Remove from heat, discard bay leaves, and serve.</li>
     </ol>
 
-    <a href="../index.html">Home</a>
 </body>
 </html>
