--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="lasagna">Lasagna</h1>
+
+    <h3>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h3>
+
+    <a href="../index.html">Home</a><br>
 
     <img src="../img/lasagna.jpg" alt="picture of lasagna" height="300" width="300">
-
-    <h2>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h2>
 
     <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — read all about his life and legacy here.</p>
 
     <p>Make our most popular lasagna today to find out what all the fuss is about!</p>
 
-    <h3>Ingredients</h3>
+    <h2 class="ingredients">Ingredients</h2>
 
-    <ul>
+    <ul id="list-ingredients">
         <li>1 pound sweet Italian sausage</li>
         <li>¾ pound lean ground beef</li>
         <li>½ cup minced onion</li>
@@ -40,9 +43,9 @@
         <li>¾ cup grated Parmesan cheese</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h2>Steps</h2>
 
-    <ol>
+    <ol id="list-ingredients">
         <li>Gather all your ingredients.</li>
         <li>Cook sausage, ground beef, onion, and garlic in a Dutch oven over medium heat until well browned.</li>
         <li>Stir in crushed tomatoes, tomato sauce, tomato paste, and water. Season with sugar, 2 tablespoons parsley, basil, 1 teaspoon salt, Italian seasoning, fennel seeds, and pepper. Simmer, covered, for about 1 ½ hours, stirring occasionally.</li>
@@ -54,7 +57,5 @@
         <li>Bake in the preheated oven for 25 minutes. Remove the foil and bake for an additional 25 minutes.</li>
         <li>Rest lasagna for 15 minutes before serving.</li>
     </ol>
-
-    <a href="../index.html">Home</a>
 </body>
 </html>
